<resources>
    <string name="app_name">final_project</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="full_name">Full name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="birthdate">Birthdate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="circular_imageview">Circular ImageView</string>
    <string name="enter_your_ans">Enter Your ans</string>
    <string name="check">check</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="newGame">New Game</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="show_all_games">Show All Games</string>
    <string name="show_last_game_date">Show last Game Date</string>
    <string name="clear_game_history">Clear Game History</string>
    <string name="remember_me">Remember me?</string>
    <string name="don_t_have_an_account_register_now">Don\'t Have An Account?</string>
    <string name="login">Log In</string>
    <string name="already_have">Do you already have an account?</string>
    <string name="score">Score:</string>
    <string name="change_password">Change Password</string>
    <string name="re_password">Re-Password</string>
    <string name="new_password">New Password</string>
    <string name="wrong_answer_try_again">Wrong answer, try again..</string>
    <string name="correct_answer_awesome">Correct answer, awesome!</string>
    <string name="date_time">Date_Time</string>
    <string name="current_password">Current Password</string>
    <string name="start">Start</string>
    <string name="welcome_rules">Welcome,</string>
    <string name="rules_to_help">Rules to help you play better:</string>
    <string name="sign_in">Sign In</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="contact_us">Contact Us</string>
    <string name="game_rulesory">Game Rulesory </string>
    <string name="rules1">- If you answer correctly, you will earn ten points.</string>
    <string name="rules2">- In case you answered incorrectly, your points will remain fixed.</string>
    <string name="rules3">- Be careful, if you leave the game you will have to start over when you return.</string>
    <string name="rules4">- Don\'t worry, your game data will be saved in your game history.</string>
    <string name="rules5">good luck,</string>
    <string name="welcome">Welcome</string>
    <string name="go">Go</string>
    <string name="lets_log_you_in">Lets Log You In</string>
    <string name="sign_up">Sign Up</string>
    <string name="ahmed_hadad">Ahmed Hadad</string>
    <string name="email">Email</string>
    <string name="user_gmail_com">User@gmail.com</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="state">State</string>
    <string name="h_hadad3">h.hadad3</string>
    <string name="score1">النقاط</string>
    <string name="your_answer">Your Answer</string>
    <string name="game_rules">Game Rules</string>
    <string name="pass">..........</string>
    <string name="password_01">password - 01</string>
    <string name="ok">OK</string>
    <string-array name="counters">
        <item>Palestine</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Austrian Empire</item>
        <item>Azerbaijan</item>
        <item>Baden</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Bavaria</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin (Dahomey)</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Brunswick and Lüneburg</item>
        <item>Bulgaria</item>
        <item>Burkina Faso (Upper Volta)</item>
        <item>Burma</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Central American Federation</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo Free State</item>
        <item>Costa Rica</item>
        <item>Cote d’Ivoire (Ivory Coast)</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Czechoslovakia</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Duchy of Parma</item>
        <item>East Germany (German Democratic Republic)</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Federal Government of Germany</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Grand Duchy of Tuscany</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Hanover</item>
        <item>Hanseatic Republics</item>
        <item>Hawaii</item>
        <item>Hesse</item>
        <item>Holy See</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Lew Chew</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mecklenburg-Schwerin</item>
        <item>Mecklenburg-Strelitz</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nassau</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North German Confederation</item>
        <item>North German Union</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oldenburg</item>
        <item>Oman</item>
        <item>Orange Free State</item>
        <item>Pakistan</item>
        <item>Palestine</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papal States</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Piedmont-Sardinia</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Republic of Genoa</item>
        <item>Republic of Korea (South Korea)</item>
        <item>Republic of the Congo</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Schaumburg-Lippe</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Swedenuriname</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Texas</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Two Similes</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Union of Soviet Socialist Republics</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wurttemberg</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

</resources>