<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Rules">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/balsamiq_sans_bold"
        android:text="@string/welcome"
        android:textColor="@color/Pink"
        android:textSize="@dimen/Rules_tv_ts"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/Rules_iv_WH"
        android:layout_height="@dimen/Rules_iv_WH"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/wavinghand"
        android:contentDescription="@string/todo" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="@dimen/BeforeGame_LL_W"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titleRules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/rules_to_help"
            android:textAllCaps="true"
            android:textColor="@color/Pink"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/tv_Rules1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/rules1"
            android:textColor="#3D526F"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_Rules2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/rules2"
            android:textColor="#3D526F"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_Rules3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/rules3"
            android:textColor="#3D526F"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_Rules4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/rules4"
            android:textColor="#3D526F"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_Rules5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/rules5"
            android:textColor="#3D526F"
            android:textSize="16sp"
            android:textStyle="normal" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Yellow2"
        android:backgroundTintMode="src_in"
        android:foregroundTint="@color/Yellow2"
        android:foregroundTintMode="src_in" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/BeforeGame_btn_Start_M"
        android:backgroundTint="@color/Blue2"
        android:text="@string/go"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.appcompat.widget.LinearLayoutCompat>