<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/balsamiq_sans_bold"
        android:text="@string/lets_log_you_in"
        android:textAlignment="gravity"
        android:textColor="@color/Pink"
        android:textSize="28sp"
        android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_logo2" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_users_name"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rec_setting"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:textColor="#4A6287"
        android:textColorHint="#3D526F"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_pass"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/rec_setting"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:textColor="#4A6287"
        android:textColorHint="#3D526F"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/Login_btnLogin_MT"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/balsamiq_sans_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/Blue2" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiq_sans_bold"
            android:text="@string/don_t_have_an_account_register_now"
            android:textColor="#707070"
            android:textSize="@dimen/Login_tvRegisterTS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/balsamiq_sans_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/Pink"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Login_chRemember_MS"
        android:layout_marginTop="@dimen/Login_chRememberMT"
        android:buttonTint="@color/Blue2"
        android:checked="true"
        android:fontFamily="@font/balsamiq_sans_bold"
        android:text="@string/remember_me"
        android:textColor="#707070"
        android:textSize="@dimen/Login_chRemember_TS"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>