<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Game">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/Game_LL_W"
        android:layout_height="@dimen/Game_LL_H"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_user_profile" />

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/Game_tv_fullName_MB"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:text="@string/textview"
                android:textColor="@color/Black"
                android:textSize="16sp"
                tools:ignore="NestedWeights" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:text="@string/textview"
                android:textColor="@color/Black"
                android:textSize="14sp" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_sco"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:text="@string/score1"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_tvSco_TS"
                tools:ignore="NestedWeights,SmallSp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_score"
                android:layout_width="@dimen/Game_tvScore_W"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/robotomedium"
                android:padding="@dimen/Game_tvScore_P"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_tv_Score_TS"
                app:drawableEndCompat="@drawable/ic_money_bag" />
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="340dp"
        android:layout_height="@dimen/Game_LL2_H"
        android:layout_marginBottom="@dimen/Game_LL2_MB"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_number"
            android:layout_width="@dimen/Game_edNumber_W"
            android:layout_height="@dimen/Game_edNumber_H"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@drawable/rec_setting"
            android:ems="4"
            android:fontFamily="@font/balsamiq_sans_bold"
            android:hint="@string/your_answer"
            android:inputType="number"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/Blue2"
            android:fontFamily="@font/balsamiq_sans_bold"
            android:text="@string/check"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="@dimen/Game_TL_W"
        android:layout_height="@dimen/Game_TL_H"
        android:layout_margin="@dimen/Game_TL_M"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.304">

        <TableRow
            android:layout_width="@dimen/Game_TR_W"
            android:layout_height="@dimen/Game_TR_H">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num1"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num1"
                android:backgroundTint="@color/Pink"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num2"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num4"
                android:backgroundTint="@color/Yellow2"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num3"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num3"
                android:backgroundTint="@color/Peach"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

        </TableRow>

        <TableRow
            android:layout_width="@dimen/Game_TR_W"
            android:layout_height="@dimen/Game_TR_H">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num4"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num4"
                android:backgroundTint="@color/Blue2"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num5"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num6"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num4"
                android:backgroundTint="@color/Pink"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

        </TableRow>

        <TableRow
            android:layout_width="@dimen/Game_TR_W"
            android:layout_height="@dimen/Game_TR_H">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num7"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num5"
                android:backgroundTint="@color/Yellow2"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num8"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num4"
                android:backgroundTint="@color/Peach"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_num9"
                android:layout_width="@dimen/Game_tvNum_WH"
                android:layout_height="@dimen/Game_tvNum_WH"
                android:layout_weight="1"
                android:background="@drawable/num2"
                android:backgroundTint="@color/Blue2"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="@color/Black"
                android:textSize="@dimen/Game_numTS" />

        </TableRow>


    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_newGame"
        android:layout_width="300dp"
        android:layout_height="@dimen/Game_btn_newGame_H"
        android:background="@color/Blue2"
        android:fontFamily="@font/balsamiq_sans_bold"
        android:text="@string/newGame"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/Blue2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.317" />

</androidx.constraintlayout.widget.ConstraintLayout>